<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tab_main_pager"
        android:enabled="true"
        android:icon="@drawable/home_select"
        android:title="@string/home_text"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_knowledge_hierarchy"
        android:enabled="true"
        android:icon="@drawable/knowledge_select"
        android:title="@string/knowledge"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_navigation"
        android:enabled="true"
        android:icon="@drawable/navgation_select"
        android:title="@string/nagitation"
        app:showAsAction="ifRoom" />

   <!-- <item
        android:id="@+id/tab_project"
        android:enabled="true"
        android:icon="@drawable/project_select"
        android:title="@string/project"
        app:showAsAction="ifRoom" />-->
</menu>
