<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".app.user.ui.activity.LoginActivity">

    <com.component.utils.IconfontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/dp_100"
        android:textColor="@color/themeColor"
        android:layout_marginTop="@dimen/dp_100"
        android:text="@string/google_phone" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:height="@dimen/dp_30">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user"
            android:singleLine="true"
            android:textSize="15sp"
            android:textColor="@color/themeColor"
            android:theme="@style/AppTheme" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/dp_30">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pass_word"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:theme="@style/AppTheme" />
        </android.support.design.widget.TextInputLayout>

        <com.component.utils.IconfontTextView
            android:id="@+id/eye_password"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/icon_eye_close"
            android:textColor="@color/themeColor"
            android:textSize="@dimen/dp_20" />
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/btn_circle_road"
        android:text="@string/login_text"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注册"
            android:padding="@dimen/dp_15"
            android:textColor="@color/themeColor"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>