<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".app.user.ui.activity.RegisterActivity">

    <com.baselibrary.view.MTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/dp_30"
        android:layout_height="@dimen/dp_80"
        android:background="@color/themeColor"
        app:left_icon="@string/back"
        app:title="@string/register_text" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_100">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user"
            android:singleLine="true"
            android:textColor="@color/themeColor"
            android:textSize="15sp"
            android:theme="@style/AppTheme" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pass_word"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/themeColor"
                android:textSize="15sp"
                android:theme="@style/AppTheme" />
        </android.support.design.widget.TextInputLayout>

        <com.component.utils.IconfontTextView
            android:id="@+id/eye_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/icon_eye_close"
            android:textColor="@color/themeColor"
            android:textSize="@dimen/dp_20" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirm_pass_word"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/themeColor"
                android:textSize="15sp"
                android:theme="@style/AppTheme" />
        </android.support.design.widget.TextInputLayout>

        <com.component.utils.IconfontTextView
            android:id="@+id/eye_password_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/icon_eye_close"
            android:textColor="@color/themeColor"
            android:textSize="@dimen/dp_20" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/code_text"
                android:singleLine="true"
                android:textColor="@color/themeColor"
                android:textSize="15sp"
                android:theme="@style/AppTheme" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/code_image"
            android:layout_width="@dimen/dp_110"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:scaleType="fitXY" />
    </RelativeLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@drawable/btn_circle_road"
        android:text="@string/register_text" />
</LinearLayout>